feat(seguridad): implementar autenticación JWT con Firebase y mejorar cobertura de tests
- Agregar FirebaseTokenFilter para validar Firebase ID Token en cada request
- Configurar SecurityConfig con CORS para producción y localhost:9002
- Endpoints públicos: POST /usuarios y GET /receta/ultimas-imagenes
- Ajustar SecurityConfig para delegar toda la lógica al filtro (anyRequest permitAll)
- Agregar exclusiones de JaCoCo para DTOs, Mappers, Enums, Model, Config, Exceptions, Security
- Completar cobertura de tests: 116 → 154 tests (controladores, servicios y repositorios)
- Crear tests faltantes: ReportController, ReportServiceImpl, UsuarioRepository
- Ampliar tests existentes con casos de error en OrdenService, UsuarioService, TamanoService y repositorios
- Agregar documentación de la feature en docs/

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>